# silvol-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/silvol/: __init__.py  client.py  finetune.py
src/silvol/integrations/: __init__.py  crewai.py  langchain.py
tests/: test_client.py  test_finetune.py
